--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   http: ^0.13.0
   url_launcher: ^6.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
